[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sbplan"
description = "A tool for scheduling observation of small bodies."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "Ruining ZHAO", email = "ruiningzhao@mail.bnu.edu.cn"}, 
]
requires-python = ">=3.7.3"
classifiers = [
    "Programming Language :: Python :: 3", 
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", 
    "Operating System :: OS Independent", 
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/RuiningZHAO/sbplan"
"Tracker" = "https://github.com/RuiningZHAO/sbplan/issues"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.package-data]
sbplan = ["catalog/lib/*", "ephemerides/lib/*"]

[tool.setuptools.dynamic]
version = {attr = "sbplan.__version__"}
dependencies = {file = "requirements.txt"}